select color auth

--- a/fe-app/src/app/globals.css
+++ b/fe-app/src/app/globals.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+@theme{
+  --color-bg-modal-auth: oklab(0.32 0 -0.01);
+  --color-bg-input-auth: oklab(0 0 0 / 0.2);
+  --color-bg-border-input-auth: oklab(0.68 0 -0.01 / 0.2);
+}
 
 body{
   height: 100vh;
